# ai-implementation

./: .gitignore  LICENSE  README.md  model1.json  pyproject.toml
model/YOLO/: train.py
model/vit/: main.ipynb
model/yolo-v1/: README.md  dataset.py  loss.py  model.py  train.py  utils.py
torchblock/: main.py
torchblock/builder/: __init__.py  base_model.py  builder.py
torchblock/layers/: __init__.py
torchblock/utils/: iou.py  iou_test.py  mAP.py  mAP_test.py  nms.py  nms_test.py
