[project]
name = "simple-torch"
version = "0.1.0"
description = ""
authors = [
    {name = "aesthetics-of-record"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
